--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
-        <file>main.qml</file>
+    <qresource prefix="/qmlres1">
+        <file>qmlres1/main.qml</file>
     </qresource>
 </RCC>
